--- a/style.css
+++ b/style.css
@@ -1,20 +1,14 @@
-body.dark-mode {
-  background-color: #222;
-  color: #fff;
-}
-
-body.light-mode {
-  background-color: #fff;
-  color: #000;
-}
 .container {
-    display: flex;
+  display: flex;
 }
 
 .form-container {
-    flex: 1;
+  flex: 1;
+  padding: 20px;
 }
 
 .list-container {
-    flex: 1;
+  flex: 1;
+  padding: 20px;
+  border-left: 1px solid #ccc;
 }
