--- a/responsive.css
+++ b/responsive.css
@@ -4,18 +4,41 @@
   width: 80%;
 }
 
+.buttons-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
 .button {
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
-  padding: 10px 20px;
-  border-radius: 5px;
   text-decoration: none;
-  display: inline-block;
-  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.button img {
+  width: 30px;
+  height: 30px;
+  margin-bottom: 5px;
 }
 
 .navigation {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
+}
+
+.button-nav {
+  text-decoration: none;
+  padding: 10px;
+}
+
+.button-nav img {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
 }
